# lars-ros

./: README.md  odom_transformer.py  topic_client.py
.github/workflows/: pr-merge.yml
gps_publisher/: package.xml  setup.py
gps_publisher/gps_publisher/: gps_publisher.py
gps_publisher/launch/: gps_bringup_launch.py
lars_resources/: lars-groundbot v0.stl
lars_ws/: frames_2025-02-22_09.48.15.gv  sdf_lars_groundbot.xml
lars_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lars_ws/log/: latest_build
lars_ws/src/lars_groundbot_control/: old_setup.py
lars_ws/src/lars_groundbot_description/: CMakeLists.txt
lars_ws/src/lars_groundbot_description/launch/: bringup.launch.py  display.launch.py  spawn_lars_groundbot.py
lars_ws/src/lars_groundbot_description/urdf/: lars_groundbot.urdf  lars_groundbot.urdf.bak  lars_groundbot.urdf.bak2
lars_ws/src/lars_groundbot_description/worlds/: gazebo.world
lars_ws/src/turtlebot3_grid_nav/: package.xml
lars_ws2/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
lars_ws2/log/: latest_build
lars_ws2/src/turtlebot3_grid_nav/: setup.cfg  setup.py
larsbot_grid_nav/: package.xml  setup.cfg  setup.py
larsbot_grid_nav/larsbot_grid_nav/: grid_navigation.py  grid_navigation_gps.py
old_ws/lars_ws/: frames_2025-02-22_09.44.33.gv
old_ws/lars_ws/install/: local_setup.sh  setup.ps1  setup.sh
ros2_fastdds_config/: fastdds_config.xml
turtlebot3_grid_nav/install/: setup.zsh
turtlebot3_grid_nav/turtlebot3_grid_nav/: grid_navigation.py  grid_navigation_gps.py
(+569 files in other folders)
